--- a/ecclesia/lectio/mateo/mateo9.html
+++ b/ecclesia/lectio/mateo/mateo9.html
@@ -2213,38 +2213,6 @@ La Iglesia, continuadora de esta misión, está llamada a proclamar con obras y 
           <summary>Variaciones en el Texto</summary>
           <strong>Variaciones textuales significativas en Mateo 9,35-38</strong><br><br>
 
-<strong>1. Biblia de Jerusalén (BJ)</strong><br>
-“Jesús recorría todas las ciudades y aldeas, enseñando en sus sinagogas, proclamando la Buena Nueva del Reino y sanando toda enfermedad y toda dolencia. <br>
-Al ver a la muchedumbre, sintió compasión de ella, porque estaban vejados y abatidos como ovejas que no tienen pastor. <br>
-Entonces dice a sus discípulos: «La mies es mucha, pero los obreros pocos; <br>
-rogad, pues, al Dueño de la mies que envíe obreros a su mies».”<br><br>
-
-<strong>2. Vulgata Latina</strong><br>
-“Et circuibat Jesus omnes civitates et castella, docens in synagogis eorum, et praedicans Evangelium regni, et curans omnem languorem et omnem infirmitatem. <br>
-Videns autem turbas, misertus est eis: quia erant vexati et jacentes sicut oves non habentes pastorem. <br>
-Tunc dicit discipulis suis: Messis quidem multa, operarii autem pauci. <br>
-Rogate ergo Dominum messis, ut mittat operarios in messem suam.”<br><br>
-
-<strong>3. Nueva Versión Internacional (NVI)</strong><br>
-“Jesús recorría todos los pueblos y aldeas, enseñando en las sinagogas, anunciando las buenas nuevas del reino y sanando toda enfermedad y dolencia. <br>
-Al ver a las multitudes, tuvo compasión de ellas porque estaban agobiadas y desamparadas, como ovejas sin pastor. <br>
-Dijo a sus discípulos: «La cosecha es abundante, pero son pocos los obreros. <br>
-Pídanle, por tanto, al Señor de la cosecha que envíe obreros a recogerla».”<br><br>
-
-<strong>4. La Biblia de las Américas (LBLA)</strong><br>
-“Jesús recorría todas las ciudades y aldeas, enseñando en sus sinagogas, proclamando el evangelio del reino y sanando toda enfermedad y toda dolencia. <br>
-Al ver las multitudes, tuvo compasión de ellas, porque estaban angustiadas y abatidas como ovejas que no tienen pastor. <br>
-Entonces dijo a sus discípulos: «La mies es mucha, pero los obreros pocos. <br>
-Por tanto, rogad al Señor de la mies que envíe obreros a su mies».”<br><br>
-
-<strong>5. Biblia Interlineal Griego-Español (traducción literal)</strong><br>
-“Y estaba yendo alrededor Jesús por todas las ciudades y aldeas, enseñando en las sinagogas de ellos y proclamando el evangelio del reino y curando toda enfermedad y toda debilidad. <br>
-Y viendo a las multitudes tuvo compasión de ellas, porque estaban fatigadas y dispersas como ovejas no teniendo pastor. <br>
-Entonces dice a los discípulos: La mies grande, los obreros pocos; <br>
-rogad, pues, al señor de la mies que envíe obreros a la mies de él.”<br><br>
-
-<hr><br>
-
 <strong>Diferencias textuales relevantes</strong><br><br>
 
 <strong>• “Vejados y abatidos” (BJ) vs. “agobiadas y desamparadas” (NVI) vs. “angustiadas y abatidas” (LBLA)</strong><br>
@@ -2539,10 +2507,15 @@ La compasión, la oración, el envío y la urgencia de anunciar el Reino constit
         <details class="select">
           <summary>Metanoia</summary>
           <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>El texto de Isaias 61,1 proclamado por Jesús en Lc 4, 18ss es el texto programatico del Señor Mc1,38 y Mc 3,13-15 etc. y la misión de los discípulos</li>
+            <li>La compasión es el motivo de su misión y de la misión de la Iglesia. [Con-pasión = padecer con] expresión del sentimiento y vivencia de la Unidad </li>
+            <li>La misión cristiana no se reduce a un aspecto: es anuncio, formación y acción sanadora integral.</li>
+            <li>La necesidad urgente de obreros para la misión.</li>
+            <li>Jesús no dice “vayan”, sino antes: “Rogad al Señor de la mies”.</li>
+            <li>La misión comienza en la súplica humilde; es Dios quien envía, llama y sostiene.</li>
+            <li>La imagen revela que la historia y la misión pertenecen a Dios; Él es dueño del campo.</li>
+            <li>La misión de Jesús responde a una necesidad existencial: sentido, dirección, esperanza y sanación.</li>
+            <li>El Reino se presenta como la verdadera alternativa a la desorientación de la humanidad sin pastor.</li>
           </ol>
         </details>
       </li>
