--- a/ecclesia/oracion/03Statio.html
+++ b/ecclesia/oracion/03Statio.html
@@ -379,9 +379,15 @@ Es primero necesario crecer para después poder vencerla</li>
             La Gracia es siempre la revelación de la Voluntad del Señor
             </li>
             <li>Precatio Quotidiana <br> Vocal: oraciones y Textos bíblicos <br>Lectio Divina <br>
-              <li>Ninguna virtud da fruto sin la Perseverancia, que es animada por la esperanza, la mueve el amor y la guía la fe. <br>Sin un mínimo de estas virtudes no podremos ser perseverantes. <br>
+          </ol>
+            <ol>
+              
+              <h3>Virtudes</h3>
+              <li>Ninguna virtud da fruto sin la <b>Perseverancia</b>, que es animada por la esperanza, la mueve el amor y la guía la fe. <br>Sin un mínimo de estas virtudes no podremos ser perseverantes. <br>
             La perseverancia es acompañada por la paciencia, es la gracia donde Dios nos indica el camino, lo que debemos cambiar, tanto en nosotros como en la realidad. Es vital la escucha atenta del Señor. <br>
             Muestra el estado de la fe, la esperanza y la Caridad, en mi</li>
+
+          <h3>Effectus</h3>
             <li>Actitud: <br> Conformar la actitud con el Evangelio <br> Relacionar las acciones con las actitudes y resultados</li>
             <li>Orden: <br> La referencia fundamental es el Fin <br>Tener presente lo que es esencial <br>Todo esta en constante desarrollo, cambio y adaptación </li>
             <li>Método: <br> Necesita de orden, paciencia y atención para iniciarse y crecer <br>
