--- a/ecclesia/lectio/mateo/mateo10.html
+++ b/ecclesia/lectio/mateo/mateo10.html
@@ -436,6 +436,24 @@
       <li>
         <details class="select">
           <summary>Metanoia</summary>
+          <ol>
+            <li>Secuencia en la Misión</li>
+            <li>La misión no nace de la iniciativa humana, sino del don recibido del Señor.</li>
+            <li>Solo Cristo puede delegar poder sobre el mal y la enfermedad.</li>
+            <li>La misión ad intra: primero a “las ovejas perdidas de Israel”</li>
+            <li>La predicación principal es: “El Reino de los cielos se ha acercado”.</li>
+            <li>Revela la dimensión integral de la salvación: cuerpo, alma y espíritu.</li>
+            <li>“Gratis lo recibieron, denlo gratis”: el servicio apostólico no es mercancía, sino don.</li>
+            <li>La misión debe vivirse sin apoyarse en seguridades externas, sino en la providencia divina.</li>
+            <li>La casa que recibe al mensajero recibe la paz; quien lo rechaza rechaza el Reino.</li>
+            <li>La misión crea comunión y dependen de la apertura del oyente. Y también como se le haga llegar el mensaje.</li>
+            <li>Todas las instrucciones proceden de Él; los apóstoles actúan en su nombre y con su autoridad. La misión es prolongación de la obra misma del Mesías.</li>
+            <li>“No se predica el Reino con palabras solamente, sino con el poder que expulsa demonios y sana a los enfermos.” Orígenes</li>
+            <li>“La Iglesia existe para evangelizar. Esta es su identidad más profunda.”
+(Pablo VI, Evangelii Nuntiandi 14)</li>
+            <li>“Quien acoge al enviado de Cristo, acoge a Cristo mismo. Y quien rechaza al enviado, rechaza al mismo Señor.” (Catecismo, 858)</li>
+           <br>
+          </ol>
         </details>
       </li>
       <!-- ****************************** -->
@@ -479,30 +497,268 @@
       <li>
         <details class="select">
           <summary>Variaciones en el Texto</summary>
+          <strong>Mateo 10,16</strong><br>
+Variación relevante: <br>
+Algunas traducciones dicen “astutos como serpientes”, otras “prudentes como serpientes”.<br>
+Concepto afectado: el matiz moral. “Astuto” puede sonar ambiguo; “prudente” expresa mejor la virtud.<br><br>
+
+<strong>Mateo 10,17</strong><br>
+No hay variaciones conceptuales relevantes entre traducciones reconocidas.<br><br>
+
+<strong>Mateo 10,18</strong><br>
+Variación leve pero con matiz: <br>
+Unas dicen “para testimonio a ellos y a los gentiles”, otras “como testimonio para ellos y para las naciones”.<br>
+Concepto: “gentiles” evoca oposición Israel–naciones; “naciones” es más universalista.<br><br>
+
+<strong>Mateo 10,19</strong><br>
+No hay variación doctrinal relevante.<br>
+Todas transmiten la idea: “no os preocupéis por lo que hablaréis; se os dará”.<br><br>
+
+<strong>Mateo 10,20</strong><br>
+No hay variación doctrinal relevante.<br>
+La frase clave (“el Espíritu de vuestro Padre hablará en vosotros”) se mantiene en todas.<br><br>
+
+<strong>Mateo 10,21</strong><br>
+Variación leve: <br>
+Algunas versiones agregan explícitamente “a la muerte”. La presencia o ausencia no cambia el sentido final.<br>
+Concepto: ninguna variación teológica significativa.<br><br>
+
+<strong>Mateo 10,22</strong><br>
+No hay variación relevante: “el que persevere hasta el fin será salvo” es estable.<br><br>
+
+<strong>Mateo 10,23</strong><br>
+Variación significativa: <br>
+Traducciones difieren entre “antes de que venga el Hijo del Hombre” y “antes de que llegue el Hijo del Hombre”.<br>
+Concepto afectado: el matiz temporal escatológico; “venga” sugiere parusía, “llegue” admite lectura como “intervención histórica”.<br><br>
+
+<strong>Mateo 10,24</strong><br>
+No hay variaciones conceptuales relevantes.<br><br>
+
+<strong>Mateo 10,25</strong><br>
+Variación leve en la frase: <br>
+“Baalzebú / Beelzebú / Belcebú”.<br>
+Concepto: solo afecta la forma del nombre, no el sentido (acusación demoníaca contra Jesús).<br><br>
+<h3>Resumen</h3>
+Variaciones que sí cambian el concepto o su matiz: <br><br>
+
+10,16 — "astutos" vs. "prudentes"<br>
+Matiz moral importante: “prudentes” se acerca más al griego phronimos.
+<br><br>
+10,18 — “gentiles” vs. “naciones”<br>
+Afecta la dimensión teológica de universalidad.<br><br>
+
+Afecta la dimensión teológica de universalidad.<br>
+10,23 — “venga” vs. “llegue” el Hijo del Hombre<br>
+Matiz escatológico fuerte: parusía vs. visita/intervención.<br><br>
+
+10,25 — Baalzebú / Beelzebú / Belcebú<br>
+Variación leve, solo lingüística.
         </details>
       </li>
       <!-- ****************************** -->
       <li>
         <details class="select">
           <summary>Paralelos</summary>
+          <strong>Textos paralelos directos a la pericopa (Mt 10,16-25)</strong><br><br>
+
+<strong>1. Marcos 13,9-13</strong><br>
+Anuncio de persecuciones, entrega a tribunales, comparecencia ante gobernadores y reyes.<br>
+Promesa de que el Espíritu Santo inspirará las palabras en el juicio.<br>
+Conflictos familiares por causa del nombre de Jesús.<br>
+Perseverancia final como condición para la salvación.<br><br>
+
+<strong>2. Lucas 12,4-12</strong><br>
+Advertencia frente a la persecución y el temor a los hombres.<br>
+Promesa del Espíritu Santo que enseña lo que se debe decir cuando los discípulos son llevados ante las autoridades.<br><br>
+
+<strong>3. Lucas 21,12-19</strong><br>
+Persecución antes del fin.<br>
+Ser llevados a sinagogas, cárceles y ante reyes por causa del nombre de Jesús.<br>
+Traiciones familiares y odio universal.<br>
+Necesidad de la perseverancia para salvar la vida.<br><br>
+
+<strong>4. Juan 15,18–16,4</strong><br>
+El mundo odia a los discípulos porque antes odió a Cristo.<br>
+Anuncio de persecuciones y expulsión de las sinagogas.<br>
+Advertencia para que los discípulos no se escandalicen ante la hostilidad.<br><br>
+
+<strong>5. Hechos 4,1-22</strong><br>
+Pedro y Juan llevados ante el Sanedrín por anunciar a Cristo.<br>
+Ejemplo práctico del cumplimiento de las palabras de Jesús sobre los juicios.<br><br>
+
+<strong>6. Hechos 5,17-42</strong><br>
+Los apóstoles son azotados y se les ordena no predicar, pero perseveran con gozo.<br><br>
+
+<strong>7. Hechos 7,54–8,1</strong><br>
+Martirio de Esteban como actualización histórica del conflicto anunciado por Jesús.<br><br>
+
+<strong>8. 1 Pedro 4,12-16</strong><br>
+La persecución como participación en los sufrimientos de Cristo.<br>
+No avergonzarse, sino glorificar a Dios en medio de la hostilidad.<br><br>
+
+<strong>9. 2 Timoteo 3,10-12</strong><br>
+Los que viven según Cristo sufrirán persecución; llamado a la fidelidad.<br><br>
+
+<strong>Temas paralelos (no textuales, sino teológicos)</strong><br>
+– La misión en medio de la hostilidad (Mt 5,11-12).<br>
+– La presencia del Espíritu en el testimonio (Jn 14,26; Jn 16,13).<br>
+– La ruptura familiar a causa del Reino (Mt 10,34-36).<br>
+– La perseverancia final como camino de salvación (Ap 2,10; Heb 10,36).<br><br>
+
         </details>
       </li>
       <!-- ****************************** -->
       <li>
         <details class="select">
           <summary>Temas</summary>
+          <ol>
+  <li>
+    La misión como envío divino<br>
+    Jesús no envía a los discípulos por iniciativa humana, sino como parte del plan de Dios. La misión se entiende como participación en la obra divina.
+  </li>
+
+  <li>
+    La tensión entre inocencia y prudencia<br>
+    “Sean sencillos como palomas y prudentes como serpientes” expresa un equilibrio teológico entre la transparencia moral y la inteligencia espiritual para discernir.
+  </li>
+
+  <li>
+    La realidad del rechazo y la persecución<br>
+    La misión cristiana implica oposición y sufrimiento, no como fracaso, sino como signo de autenticidad y comunión con Cristo.
+  </li>
+
+  <li>
+    La acción del Espíritu en el testimonio<br>
+    El Espíritu Santo es quien inspira la respuesta del discípulo cuando es llevado ante tribunales; el testimonio no se apoya en capacidades humanas sino en asistencia divina.
+  </li>
+
+  <li>
+    Participación en el destino de Cristo<br>
+    “Si a mí me han perseguido, también a ustedes” expresa que el discípulo comparte la suerte de su Maestro: unión con Cristo en misión y en sufrimiento.
+  </li>
+
+  <li>
+    La familia como espacio posible de conflicto por el Evangelio<br>
+    La fidelidad a Cristo puede generar división incluso entre los más cercanos. El seguimiento tiene prioridad absoluta.
+  </li>
+</ol>
+
         </details>
       </li>
       <!-- ****************************** -->
       <li>
         <details class="select">
           <summary>Patrística</summary>
+          <ol>
+
+  <li>
+    San Juan Crisóstomo (Homilía 34 sobre Mateo)<br>
+    “Cristo no oculta a sus discípulos los peligros, para que, conociéndolos desde el inicio, los sobrelleven con mayor fortaleza.”<br>
+    (Hom. in Matth., 34,1)<br>
+  </li>
+
+  <li>
+    San Jerónimo<br>
+    “Ser prudentes como serpientes significa evitar las asechanzas; ser sencillos como palomas, no devolver mal por mal.”<br>
+    (Commentarii in Matthaeum, 10,16)<br>
+  </li>
+
+  <li>
+    Orígenes<br>
+    “No debemos temer a los que matan el cuerpo, porque el verdadero daño solo puede tocar el alma, y esta está segura en Dios.”<br>
+    (Commentarium in Matthaeum, fragm. ad cap. 10)<br>
+  </li>
+
+  <li>
+    San Hilario de Poitiers<br>
+    “El odio del mundo hacia los discípulos es signo de su configuración con Cristo.”<br>
+    (In Matthaeum, 10,16-23)<br>
+  </li>
+
+  <li>
+    San Agustín<br>
+    “Cristo quiso que sus siervos fueran probados por persecuciones para que aprendieran a apoyarse en Dios y no en sí mismos.”<br>
+    (Sermo 46, De persecutionibus)<br>
+  </li>
+
+  <li>
+    San Beda el Venerable<br>
+    “El Espíritu Santo habla en los testigos no porque no sepan hablar, sino para que su palabra sea eficaz para la salvación de quienes la escuchan.”<br>
+    (In Evangelium Matthaei, lib. II, ad 10,20)<br>
+  </li>
+
+  <li>
+    San Cirilo de Alejandría<br>
+    “El discípulo comparte los sufrimientos de Cristo, y por eso también participa de su gloria.”<br>
+    (Fragmenta in Matthaeum, ad 10,24-25)<br>
+  </li>
+
+</ol>
+
         </details>
       </li>
       <!-- ****************************** -->
       <li>
         <details class="select">
           <summary>Magisterio</summary>
+          <ol>
+
+  <li>
+    Concilio Vaticano II — *Ad Gentes* (1965)<br>
+    “Como Cristo fue enviado por el Padre, así también Él envió a los apóstoles, llenos del Espíritu Santo, para que anunciaran el Evangelio en medio de las persecuciones y tribulaciones.”<br>
+    (AG 3)<br>
+  </li>
+
+  <li>
+    Concilio Vaticano II — *Lumen Gentium* (1964)<br>
+    “La Iglesia, siguiendo los pasos de su Maestro, es también llamada por Dios a recorrer el mismo camino de pobreza, obediencia y sufrimientos para comunicar la salvación.”<br>
+    (LG 8)<br>
+  </li>
+
+  <li>
+    San Juan Pablo II — *Redemptoris Missio* (1990)<br>
+    “La misión siempre ha estado marcada por la cruz, pero precisamente esta es fuente de fecundidad apostólica.”<br>
+    (RM 39)<br>
+  </li>
+
+  <li>
+    Papa Francisco — *Gaudete et Exsultate* (2018)<br>
+    “Jesús no promete a los discípulos una vida cómoda; por el contrario, los envía como ovejas en medio de lobos. La santidad se vive en medio del conflicto.”<br>
+    (GE 91)<br>
+  </li>
+
+  <li>
+    Concilio Vaticano II — *Dignitatis Humanae* (1965)<br>
+    “Los discípulos de Cristo, al anunciar la verdad, deben hacerlo sin coacciones, confiando en la fuerza de la Palabra de Dios, incluso cuando sufren oposición.”<br>
+    (DH 11)<br>
+  </li>
+
+  <li>
+    Benedicto XVI — *Spe Salvi* (2007)<br>
+    “La persecución por causa del Evangelio ha formado parte de la identidad de los cristianos desde el principio, pero en esa prueba el creyente encuentra esperanza y fortaleza.”<br>
+    (SS 37)<br>
+  </li>
+
+  <li>
+    Catecismo de la Iglesia Católica (1992)<br>
+    “El Espíritu Santo da a los testigos del Evangelio la gracia necesaria para confesar a Cristo incluso ante persecuciones y contradicciones.”<br>
+    (CEC 1303; cf. 2471-2473)<br>
+  </li>
+
+  <li>
+    San Pablo VI — *Evangelii Nuntiandi* (1975)<br>
+    “El anuncio del Evangelio, aun cuando se hace con mansedumbre, puede suscitar rechazos; pero el evangelizador no debe dejarse dominar por el miedo.”<br>
+    (EN 80)<br>
+  </li>
+
+  <li>
+    Papa Francisco — *Evangelii Gaudium* (2013)<br>
+    “Quien anuncia el Evangelio no debe asombrarse de la incomprensión o persecución; la fragilidad del mensajero manifiesta el poder de Dios.”<br>
+    (EG 84)<br>
+  </li>
+
+</ol>
+
         </details>
       </li>
       <!-- ****************************** -->
