--- a/ecclesia/oracion/04 Statio.html
+++ b/ecclesia/oracion/04 Statio.html
@@ -617,7 +617,8 @@
             <li>Toda Gracia, nos invita a la acción. </li>
             <li>Cada Acto es bueno, si está lleno de fe esperanza y calidad.</li>
             <H4>LUGARES DE GRACIA</H4>
-            <LI>“TODO ES GRACIA” (OMNIA GRATIA EST).</LI>
+            <LI>“TODO ES GRACIA” (Omnia Gratia Est).</LI>
+            <li>La Gracia se muestra en el bien, Buscar el bien en cada momento es aceptar la Gracia que es Dios mismo.</li>
             <LI>Lo que fue visible en nuestro Salvador ha pasado a sus sacramentos.” León Magno </LI>
             <li>En cada situación hay indicios de la acción de Dios: un encuentro, una conversación, una idea, una
               experiencia de bondad o de consuelo pueden ser vistos como manifestaciones de la gracia que suscita la fe
