--- a/ecclesia/lectio/mateo/index.html
+++ b/ecclesia/lectio/mateo/index.html
@@ -29,7 +29,7 @@
   <h2 class="subtitulo"> Referencia de la Biblia de Jerusalén</h2>
   <div>
     <ol>
-      <li class="li"><a href="./mateo1.html"> 2 perícopas  </a></li>
+      <li class="li"><a href="./mateo1.html"> 2 perícopas  </a>>>>2025</li>
       <li class="li"><a href="./mateo2.html"> 3 perícopas-5  </a></li>
       <li class="li"><a href="./mateo3.html"> 2 perícopas-7  </a></li>
       <li class="li"><a href="./mateo4.html"> 4 perícopas-11  </a></li>
@@ -38,25 +38,25 @@
       <li class="li"><a href="./mateo7.html"> 8 perícopas-31  </a></li>
       <li class="li"><a href="./mateo8.html"> 7 perícopas-38  </a></li>
       <li class="li"><a href="./mateo9.html"> 8 perícopas-46  </a></li>
-      <li class="li"><a href="./mateo10.html">6  perícopas-52</a></li>
-      <li class="li"><a href="./mateo11.html"> 5 perícopas </a></li>
-      <li class="li"><a href="./mateo12.html"> 8 perícopas </a></li>
-      <li class="li"><a href="./mateo13.html"> 11 perícopas </a></li>
-      <li class="li"><a href="./mateo14.html"> 5 perícopas </a></li>
-      <li class="li"><a href="./mateo15.html"> 5 perícopas </a></li>
-      <li class="li"><a href="./mateo16.html"> 4 perícopas </a></li>
-      <li class="li"><a href="./mateo17.html"> 5 perícopas </a></li>
-      <li class="li"><a href="./mateo18.html"> 7 perícopas </a></li>
-      <li class="li"><a href="./mateo19.html"> 6 perícopas  </a></li>
-      <li class="li"><a href="./mateo20.html"> 5 perícopas </a></li>
-      <li class="li"><a href="./mateo21.html"> 6 perícopas </a></li>
-      <li class="li"><a href="./mateo22.html"> 5 perícopas </a></li>
-      <li class="li"><a href="./mateo23.html"> 4 perícopas </a></li>
-      <li class="li"><a href="./mateo24.html"> 8 perícopas </a></li>
-      <li class="li"><a href="./mateo25.html"> 3 perícopas </a></li>
-      <li class="li"><a href="./mateo26.html"> 11 perícopas </a></li>
-      <li class="li"><a href="./mateo27.html"> 9 perícopas  </a></li>
-      <li class="li"><a href="./mateo28.html"> 4 perícopas </a></li>
+      <li class="li"><a href="./mateo10.html">6  perícopas-50+2 </a>>>>2026</li>
+      <li class="li"><a href="./mateo11.html"> 5 perícopas-7 </a></li>
+      <li class="li"><a href="./mateo12.html"> 8 perícopas-15 </a></li>
+      <li class="li"><a href="./mateo13.html"> 11 perícopas-26 </a></li>
+      <li class="li"><a href="./mateo14.html"> 5 perícopas-31 </a></li>
+      <li class="li"><a href="./mateo15.html"> 5 perícopas-36 </a></li>
+      <li class="li"><a href="./mateo16.html"> 4 perícopas-40 </a></li>
+      <li class="li"><a href="./mateo17.html"> 5 perícopas-45 </a></li>
+      <li class="li"><a href="./mateo18.html"> 7 perícopas-52*2 </a>>>>2027</li>
+      <li class="li"><a href="./mateo19.html"> 6 perícopas-8  </a></li>
+      <li class="li"><a href="./mateo20.html"> 5 perícopas-13 </a></li>
+      <li class="li"><a href="./mateo21.html"> 6 perícopas-19 </a></li>
+      <li class="li"><a href="./mateo22.html"> 5 perícopas-24 </a></li>
+      <li class="li"><a href="./mateo23.html"> 4 perícopas-28 </a></li>
+      <li class="li"><a href="./mateo24.html"> 8 perícopas-36 </a></li>
+      <li class="li"><a href="./mateo25.html"> 3 perícopas-39 </a></li>
+      <li class="li"><a href="./mateo26.html"> 11 perícopas-50 </a>>>>2028</li>
+      <li class="li"><a href="./mateo27.html"> 9 perícopas-9  </a></li>
+      <li class="li"><a href="./mateo28.html"> 4 perícopas-13 </a></li>
       <li class="li"><a href="#1">NOTAS </a></li>
   
     </ol>
