--- a/ecclesia/lectio/mateo/mateo10.html
+++ b/ecclesia/lectio/mateo/mateo10.html
@@ -592,11 +592,11 @@ Los apóstoles son azotados y se les ordena no predicar, pero perseveran con goz
 <strong>7. Hechos 7,54–8,1</strong><br>
 Martirio de Esteban como actualización histórica del conflicto anunciado por Jesús.<br><br>
 
-<strong>8. 1 Pedro 4,12-16</strong><br>
+<strong>8. Pedro 4,12-16</strong><br>
 La persecución como participación en los sufrimientos de Cristo.<br>
 No avergonzarse, sino glorificar a Dios en medio de la hostilidad.<br><br>
 
-<strong>9. 2 Timoteo 3,10-12</strong><br>
+<strong>9.Timoteo 3,10-12</strong><br>
 Los que viven según Cristo sufrirán persecución; llamado a la fidelidad.<br><br>
 
 <strong>Temas paralelos (no textuales, sino teológicos)</strong><br>
@@ -766,10 +766,27 @@ Los que viven según Cristo sufrirán persecución; llamado a la fidelidad.<br><
         <details class="select">
           <summary>Metanoia</summary>
           <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Confianza en Dios viviendo el momento actual según su Voluntad</li>
+            <li>Asemejarse en todo a Cristo, según el tiempo</li>
+            <li>La prudencia como discernimiento del mayor bien posible</li>
+            <li>La fe se vive en un ambiente de duda, la fidelidad en un ambiente de conflicto <br>
+              hch 4,1-22, Pedro y Juan llevados ante autoridades <br>
+              5,17-42 Apóstoles azotados y perseverantes <br>
+              7,54–8,1 Martirio de Esteban</li>
+              1Pe 4,12-16 Persecución como participación en los sufrimientos de Cristo <br>
+              2Tim 3,10-12 Los que viven según Cristo sufrirán persecución; llamado a la fidelidad <br>
+              Temas paralelos (no textuales, sino teológicos)<br>
+– La misión en medio de la hostilidad (Mt 5,11-12).<br>
+– La presencia del Espíritu en el testimonio (Jn 14,26; Jn 16,13).el testimonio no se apoya en capacidades humanas sino en asistencia divina, para que su palabra sea eficaz para la salvación de quienes la escuchan.<br>
+– La ruptura familiar a causa del Reino (Mt 10,34-36).<br>
+– La perseverancia final como camino de salvación (Ap 2,10; Heb 10,36).<br>
+            </li>
+            <li>Misión como participación de la obra de salvación</li>
+            <li>La realidad del rechazo y la persecución:La misión cristiana implica oposición y sufrimiento, no como fracaso, sino como signo de autenticidad y comunión con Cristo.</li>
+            <li>San Hilario de Poitiers: “El odio del mundo hacia los discípulos es signo de su configuración con Cristo.”</li>
+            <li>San Agustín: “Cristo quiso que sus siervos fueran probados por persecuciones para que aprendieran a apoyarse en Dios y no en sí mismos.”</li>
+            <li>San Juan Pablo II — *Redemptoris Missio* (1990): “La misión siempre ha estado marcada por la cruz, pero precisamente esta es fuente de fecundidad apostólica.</li>
+          
           </ol>
         </details>
       </li>
